<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent" android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/LoginScreentextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:text="@string/LoginScreen"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/emailtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/LoginScreentextView"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/emailtextView"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@+id/emailtextView"
            android:inputType="textEmailAddress"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/passwordtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailtextView"
            android:layout_below="@+id/emailtextView"
            android:layout_marginTop="38dp"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/passwordtextView"
            android:layout_alignLeft="@+id/txtEmail"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtpassword"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="54dp"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtpassword"

            android:layout_marginTop="54dp"
            android:layout_marginLeft="200dp"
            android:text="@string/Login" />

        <TextView
            android:id="@+id/loginFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordtextView"
            android:layout_below="@+id/passwordtextView"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <!-- <TextView
             android:id="@+id/attemptstextView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/LoginScreentextView"
             android:layout_alignTop="@+id/attemptstextView"
             android:text="TextView" />-->

    </RelativeLayout>
</ScrollView>